--- a/index.html
+++ b/index.html
@@ -21,12 +21,6 @@
     <!-- link to custom css -->
     <link rel="stylesheet" href="stylesheet/stylesheet.css">
 
-    <!--animate.css-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
-
-   <!--animate on scroll-->
-   <link rel="stylesheet" href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css"/>
-
 
     <!--[if lt IE 9]>
 	<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -72,20 +66,20 @@
 
     <section id="landing">
         <div class="landing-bg text-center">
-            <img id="hex1" src="assets/svgs/hex-1.svg">
-            <img id="hex2" src="assets/svgs/hex-2.svg">
-            <img id="hex3" src="assets/svgs/hex-3.svg">
+            <img id="hex1" src="assets/images/hex-1.png">
+            <img id="hex2" src="assets/images/hex-2.png">
+            <img id="hex3" src="assets/images/hex-3.png">
         </div>
         <div class="container">
             <div class="row">
                 <div class="col-12 text-center">
                     <div class="logo">
-                        <img class="logo" src="assets/images/logo.svg" alt="<>">
+                        <img class="logo" src="assets/images/logo.png" alt="logo">
                         <h1 class="text-white">Laura Ann Seal</h1>
                     </div>
                 </div>
                 <div class="col-xl-2 offset-xl-10 text-white text-center hide-until-desktop">
-                    <div class="more-icon">
+                    <div class="more-icon to-brand">
                         <a href="#brand">
                             more
                              <br>
@@ -117,7 +111,7 @@
                             <h1 class="show-text">brand</h1>
                         </div>
                         <div class="col-md-4">
-                            <img src="assets/svgs/hori-lines.svg" class="hide-mobile w-100" alt="|||">
+                            <img src="assets/images/hori-lines.png" class="hide-mobile w-100" alt="|||">
                         </div>
                         <div class="col-md-8 col-xl-6 text-white">
                             <p>
@@ -142,7 +136,7 @@
                     <i class="brand fas fa-laptop-code"></i>
                     <i class="brand fas fa-mobile-alt"></i>
                     <i class="brand fas fa-ad"></i>
-                    <a href="#design"><i class="arrow fas fa-arrow-down"></i></a>
+                    <a href="#design" class="arrow"><i class="arrow fas fa-arrow-down"></i></a>
                 </div><!--col-->
 
             </div><!--row-->
@@ -167,6 +161,15 @@
                         <a href="services.html" class="btn btn-secondary">more services</a>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-xl-2 offset-xl-10 text-white text-center hide-until-desktop">
+                        <div class="more-icon to-production">
+                            <a href="#production">
+                                <i class="arrow fas fa-arrow-down"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
             </div>
     </section>
 
@@ -185,6 +188,15 @@
                 </div>
                 <div class="col-12 text-center">
                     <a href="services.html" class="btn btn-warning">more services</a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xl-2 offset-xl-10 text-white text-center hide-until-desktop">
+                    <div class="more-icon to-get-in-touch">
+                        <a href="#get-in-touch">
+                            <i class="arrow fas fa-arrow-down"></i>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -251,9 +263,6 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
-    <!--animate on scroll-->
-    <script src='https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js'></script>
-
     <!-- custom scripts -->
     <script src="scripts/navbar.js"></script>
     <script>
@@ -262,6 +271,7 @@
         ]
     </script>
     <script src="scripts/developYour.js"></script>
+    <script src="scripts/animate.js"></script>
     
 </body>
 </html>
