checked for browser compatibility

--- a/project.html
+++ b/project.html
@@ -107,17 +107,17 @@
             </div>
         </div>
         <div class="project-scroller">
-            <div class="project d-flex align-items-center"><a href="#"><img src="assets/images/eg-work.png" alt="work" class="w-100"></a></div>
-            <div class="project d-flex align-items-center"><a href="#"><img src="assets/images/eg-work.png" alt="work" class="w-100"></a></div>
-            <div class="project d-flex align-items-center"><a href="#"><img src="assets/images/eg-work.png" alt="work" class="w-100"></a></div>
-            <div class="project d-flex align-items-center"><a href="#"><img src="assets/images/eg-work.png" alt="work" class="w-100"></a></div>
-            <div class="project d-flex align-items-center"><a href="#"><img src="assets/images/eg-work.png" alt="work" class="w-100"></a></div>
-            <div class="project d-flex align-items-center"><a href="#"><img src="assets/images/eg-work.png" alt="work" class="w-100"></a></div>
-            <div class="project d-flex align-items-center"><a href="#"><img src="assets/images/eg-work.png" alt="work" class="w-100"></a></div>
-            <div class="project d-flex align-items-center"><a href="#"><img src="assets/images/eg-work.png" alt="work" class="w-100"></a></div>
-            <div class="project d-flex align-items-center"><a href="#"><img src="assets/images/eg-work.png" alt="work" class="w-100"></a></div>
-            <div class="project d-flex align-items-center"><a href="#"><img src="assets/images/eg-work.png" alt="work" class="w-100"></a></div>
-            <div class="project d-flex align-items-center"><a href="#"><img src="assets/images/eg-work.png" alt="work" class="w-100"></a></div>
+            <div class="project"><a href="#"><img src="assets/images/eg-work.png" alt="work" class="w-100"></a></div>
+            <div class="project"><a href="#"><img src="assets/images/eg-work.png" alt="work" class="w-100"></a></div>
+            <div class="project"><a href="#"><img src="assets/images/eg-work.png" alt="work" class="w-100"></a></div>
+            <div class="project"><a href="#"><img src="assets/images/eg-work.png" alt="work" class="w-100"></a></div>
+            <div class="project"><a href="#"><img src="assets/images/eg-work.png" alt="work" class="w-100"></a></div>
+            <div class="project"><a href="#"><img src="assets/images/eg-work.png" alt="work" class="w-100"></a></div>
+            <div class="project"><a href="#"><img src="assets/images/eg-work.png" alt="work" class="w-100"></a></div>
+            <div class="project"><a href="#"><img src="assets/images/eg-work.png" alt="work" class="w-100"></a></div>
+            <div class="project"><a href="#"><img src="assets/images/eg-work.png" alt="work" class="w-100"></a></div>
+            <div class="project"><a href="#"><img src="assets/images/eg-work.png" alt="work" class="w-100"></a></div>
+            <div class="project"><a href="#"><img src="assets/images/eg-work.png" alt="work" class="w-100"></a></div>
         </div>
     </section>
     
